--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: darkgrey;
+    background-color: #cccbcb;
     padding: 2rem;
 }
 
@@ -74,7 +74,9 @@ hr{
     color: whitesmoke; 
     background-color: whitesmoke; 
     max-width: 1280px;
+    padding: 1PX;
     margin: 0 auto;
+    border: none;
 }
 
 .copyright{
